[gd_scene load_steps=15 format=2]

[ext_resource path="res://Resources/SignalTypes/hp_tafel.tres" type="Material" id=1]
[ext_resource path="res://Resources/SignalTypes/LightSignalMaterial.tres" type="Material" id=2]
[ext_resource path="res://Resources/SignalTypes/CombinedHpVo/Light/HpVo-Sig.obj" type="ArrayMesh" id=3]
[ext_resource path="res://Resources/SignalTypes/HpTafel.obj" type="ArrayMesh" id=4]
[ext_resource path="res://Resources/SignalTypes/CombinedHpVo/Light/CombinedHpVoLight.gd" type="Script" id=5]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 1, 0.00392157, 0.00392157, 1 )
emission_enabled = true
emission = Color( 1, 0, 0, 1 )
emission_energy = 16.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SphereMesh" id=2]
radius = 0.05
height = 0.1

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.992157, 0.0941176, 0.027451, 1 )
emission_enabled = true
emission = Color( 1, 0, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false
distance_fade_mode = 1
distance_fade_min_distance = 70.0
distance_fade_max_distance = 200.0

[sub_resource type="SphereMesh" id=4]
radius = 0.3
height = 0.6
radial_segments = 6
rings = 3

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 1, 0.658824, 0.00392157, 1 )
emission_enabled = true
emission = Color( 1, 0.513726, 0, 1 )
emission_energy = 1.87
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.992157, 0.658824, 0.027451, 1 )
emission_enabled = true
emission = Color( 1, 0.843137, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false
distance_fade_mode = 1
distance_fade_min_distance = 70.0
distance_fade_max_distance = 200.0

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.00392157, 1, 0.0196078, 1 )
emission_enabled = true
emission = Color( 0.196078, 1, 0, 1 )
emission_energy = 1.87
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 0.0588235, 0.992157, 0.027451, 1 )
emission_enabled = true
emission = Color( 0, 1, 0.0392157, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false
distance_fade_mode = 1
distance_fade_min_distance = 70.0
distance_fade_max_distance = 200.0

[sub_resource type="BoxShape" id=9]
extents = Vector3( 0.550892, 2.87686, 0.359881 )

[node name="VisualInstance" type="Spatial"]
script = ExtResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.667 )
material_override = ExtResource( 2 )
mesh = ExtResource( 3 )
material/0 = null
material/1 = null

[node name="HpTafel" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.8, 0, -0.740013, 1.74491 )
mesh = ExtResource( 4 )
material/0 = ExtResource( 1 )

[node name="Red1" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0954146, 4.00953, 1.85626 )
material_override = SubResource( 1 )
cast_shadow = 0
mesh = SubResource( 2 )
material/0 = null

[node name="MeshInstance" type="MeshInstance" parent="Red1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, -0.00316238, 0 )
material_override = SubResource( 3 )
mesh = SubResource( 4 )
material/0 = null

[node name="Red2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0954146, 4.00953, 2.07791 )
material_override = SubResource( 1 )
cast_shadow = 0
mesh = SubResource( 2 )
material/0 = null

[node name="MeshInstance" type="MeshInstance" parent="Red2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
material_override = SubResource( 3 )
mesh = SubResource( 4 )
material/0 = null

[node name="OrangeHp" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.098472, 3.59403, 1.8577 )
material_override = SubResource( 5 )
cast_shadow = 0
mesh = SubResource( 2 )
material/0 = null

[node name="MeshInstance2" type="MeshInstance" parent="OrangeHp"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
material_override = SubResource( 6 )
mesh = SubResource( 4 )
material/0 = null

[node name="OrangeVo1" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.098472, 2.35867, 1.72741 )
material_override = SubResource( 5 )
cast_shadow = 0
mesh = SubResource( 2 )
material/0 = null

[node name="MeshInstance2" type="MeshInstance" parent="OrangeVo1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
material_override = SubResource( 6 )
mesh = SubResource( 4 )
material/0 = null

[node name="OrangeVo2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.098472, 2.63764, 2.07594 )
material_override = SubResource( 5 )
cast_shadow = 0
mesh = SubResource( 2 )
material/0 = null

[node name="MeshInstance2" type="MeshInstance" parent="OrangeVo2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
material_override = SubResource( 6 )
mesh = SubResource( 4 )
material/0 = null

[node name="GreenHp" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0964804, 4.20485, 1.85929 )
material_override = SubResource( 7 )
cast_shadow = 0
mesh = SubResource( 2 )
material/0 = null

[node name="MeshInstance3" type="MeshInstance" parent="GreenHp"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
material_override = SubResource( 8 )
mesh = SubResource( 4 )
material/0 = null

[node name="GreenVo1" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0964804, 2.3583, 1.8973 )
material_override = SubResource( 7 )
cast_shadow = 0
mesh = SubResource( 2 )
material/0 = null

[node name="MeshInstance3" type="MeshInstance" parent="GreenVo1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
material_override = SubResource( 8 )
mesh = SubResource( 4 )
material/0 = null

[node name="GreenVo2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0964804, 2.63788, 2.24766 )
material_override = SubResource( 7 )
cast_shadow = 0
mesh = SubResource( 2 )
material/0 = null

[node name="MeshInstance3" type="MeshInstance" parent="GreenVo2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
material_override = SubResource( 8 )
mesh = SubResource( 4 )
material/0 = null

[node name="SelectCollider" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.37803, -1.33251, 1.6287 )

[node name="AabbShape" type="CollisionShape" parent="SelectCollider"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.550892, 2.87686, 0.359881 )
shape = SubResource( 9 )
